<resources>
    <string name="app_name">Activity1</string>
    <string name="var1">Ini Pesan</string>
    <string name="bsignin">Sign-In</string>
    <string name="tLogin">LOGIN</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail">Email : </string>
    <string name="tPassword">Password : </string>
    <string name="txemail">Ini Hasil Email </string>
    <string name="txPassword">Ini Hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="todo">TODO</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="lDaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepas">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihatData">Lihat Data</string>
    <string name="editData">Edit Data</string>
    <string name="dataKontak">Data Kontak</string>
    <string name="namaItem">Nama Item</string>
    <string name="detailKontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="noTel">Nomor Telepon</string>
</resources>